@@ -13,7 +13,7 @@ namespace scene
 
 //! constructor
 CSceneNodeAnimatorDelete::CSceneNodeAnimatorDelete(ISceneManager* manager, u32 time)
-: DeleteTime(time), SceneManager(manager)
+: ISceneNodeAnimatorFinishing(time), SceneManager(manager)
 {
 	#ifdef _DEBUG
 	setDebugName("CSceneNodeAnimatorDelete");
@@ -32,18 +32,22 @@ CSceneNodeAnimatorDelete::~CSceneNodeAnimatorDelete()
 //! animates a scene node
 void CSceneNodeAnimatorDelete::animateNode(ISceneNode* node, u32 timeMs)
 {
-	if (timeMs > DeleteTime && node && SceneManager)
+	if (timeMs > FinishTime)
 	{
-		// don't delete if scene manager is attached to an editor
-		if (!SceneManager->getParameters()->getAttributeAsBool(IRR_SCENE_MANAGER_IS_EDITOR))
-			SceneManager->addToDeletionQueue(node);
+		HasFinished = true;
+		if(node && SceneManager)
+		{
+			// don't delete if scene manager is attached to an editor
+			if (!SceneManager->getParameters()->getAttributeAsBool(IRR_SCENE_MANAGER_IS_EDITOR))
+				SceneManager->addToDeletionQueue(node);
+		}
 	}
 }
 
 ISceneNodeAnimator* CSceneNodeAnimatorDelete::createClone(ISceneNode* node, ISceneManager* newManager)
 {
 	CSceneNodeAnimatorDelete * newAnimator = 
-		new CSceneNodeAnimatorDelete(SceneManager, DeleteTime);
+		new CSceneNodeAnimatorDelete(SceneManager, FinishTime);
 
 	return newAnimator;
 }
