@@ -214,6 +214,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\sceneNodeAnimator.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\softwareDevice.cpp"
 				>
 			</File>
